- Replaced StringUtils isBlank() usage with isBlank from String (since Java 11) - Removed commons-lang3 dependency from pom.xml